--- a/frontend/src/css/adminLoginPage.css
+++ b/frontend/src/css/adminLoginPage.css
@@ -121,9 +121,9 @@
 
 
   .e-bank-logo-admin {
-    position: absolute;
-    top: -10px;
-    right: 175px;
+    position: relative;
+    top: -30px;
+    /* right: 5px; */
     width: 300px; /* Adjust width as needed */
     height: 300px;
     border-radius: 50%;
