--- a/frontend/src/css/AdminDashboard.css
+++ b/frontend/src/css/AdminDashboard.css
@@ -149,12 +149,13 @@
     letter-spacing: 1.5px;
   }
   
-  .e-bank-logo {
+  .e-bank-logo3 {
     position: absolute;
-    top: -10px;
-    left: -20px;
-    width: 170px; /* Adjust width as needed */
-    height: 120px;
+    /* position: relative; */
+    top: -30px;
+    left: -25px;
+    width: 250px; /* Adjust width as needed */
+    height: 200px;
     border-radius: 50%;
     mix-blend-mode: multiply;
   }
