--- a/frontend/src/css/CreateBank.css
+++ b/frontend/src/css/CreateBank.css
@@ -128,12 +128,13 @@
   }
   
 
-  .e-bank-logo {
+  .e-bank-logo4 {
     position: absolute;
-    top: -10px;
-    left: -20px;
-    width: 170px; /* Adjust width as needed */
-    height: 120px;
+    /* position: relative; */
+    top: -30px;
+    left: -25px;
+    width: 250px; /* Adjust width as needed */
+    height: 200px;
     border-radius: 50%;
     mix-blend-mode: multiply;
   }
